--- a/application/views/scripts/user/index.phtml
+++ b/application/views/scripts/user/index.phtml
@@ -8,9 +8,9 @@ $formUser = $this->form;
 $nameLabel = $formUser->name->getLabel();
 $name = $formUser->name;
 $nameErr = $formUser->name->getMessages();
-var_dump($nameErr);
 $ageLabel = $formUser->age->getLabel();
 $age = $formUser->age;
+$ageErr = $formUser->age->getMessages();
 $btnShow = $formUser->Show;
 $btnAdd = $formUser->Add;
 $btnUpdate = $formUser->Update;
@@ -18,19 +18,32 @@ $btnUpdate = $formUser->Update;
 <div id="view-content">
 	<p>View script for controller <b>User</b> and script/action name <b>index</b></p>
 	<div id="control">
-	<form method="post" action="">
+	<form method="post" id="profileForm" action="">
 		<table>
 			<tr>
 				<td><?php echo $nameLabel; ?></td>
 				<td><?php echo $name; ?></td>
 			</tr>
+			<tr id="nameErr">
+				<td id="tdNameErr" colspan="2">
+					<?php foreach ($nameErr as $message) :?>
+						<p><?php echo $message ?></p>
+					<?php endforeach;?>
+				</td>
+			</tr>
 			<tr>
 				<td><?php echo $ageLabel; ?></td>
 				<td><?php echo $age; ?></td>
 			</tr>
+			<tr id="ageErr">
+				<td id="tdAgeErr" colspan="2">
+					<?php foreach ($ageErr as $message) :?>
+						<p><?php echo $message ?></p>
+					<?php endforeach;?>
+				</td>
+			</tr>
 			<tr>
 				<td colspan="2">
-				<?php echo $btnShow; ?>
 				<?php echo $btnAdd; ?>
 				<?php echo $btnUpdate; ?>
 				</td>
@@ -47,7 +60,19 @@ $btnUpdate = $formUser->Update;
 				</tr>
 			</thead>
 			<tbody id="lineInfo">
-			
+			<tr class="rowUserInfo" id="sadfsd111"><td>sadfsad</td></tr>
+			<?php 
+				$users = $this->users; /* @var $users UserController */
+				foreach($users as $user) : 
+					$userName = $user['name'];
+					$userAge = $user['age'];
+					$userId = $user['id'];
+				?>
+				<tr id="<?php echo $userId ?>" class="rowUserInfo" >
+					<td><?php echo $userName?></td>
+					<td><?php echo $userAge ?></td>
+				</tr>
+				<?php endforeach; ?>
 			</tbody>
 		</table>
 	</div>
