--- a/application/views/scripts/video/index.phtml
+++ b/application/views/scripts/video/index.phtml
@@ -33,7 +33,7 @@ $videoResetData = $videoForm->Reset;
         <tr>
             <td colspan="2">
                 <ul id="messageErr">
-                    
+                    <!-- show message error -->
                 </ul>
             </td>
         </tr>
